fixes vertical spacing on video

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -240,3 +240,7 @@ a[data-open-video] {
     align-items: center;
   }
 }
+
+.mb1 {
+  margin-bottom: 1rem;
+}
